--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-    "license": "MIT",
-    "version": "1.0.1",
-    "author": "Gustavo Ocanto",
-    "name": "vuemit",
-    "main": "Vuemit.js",
-    "description": "The smallest Vue.js events handler.",
-    "homepage": "https://github.com/gocanto/google-autocomplete",
-
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/gocanto/vuemit.git"
-    },
-
-    "keywords": [
-        "vue",
-        "events",
-        "handler"
+  "license": "MIT",
+  "version": "1.0.3",
+  "author": "Gustavo Ocanto",
+  "name": "vuemit",
+  "main": "src/Vuemit.js",
+  "description": "The smallest Vue.js events handler.",
+  "homepage": "https://github.com/gocanto/vuemit",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gocanto/vuemit.git"
+  },
+  "scripts": {
+    "test": "nyc ava --verbose"
+  },
+  "keywords": [
+    "vue",
+    "events",
+    "handler"
+  ],
+  "dependencies": {
+    "ava": "^0.18.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "nyc": "^10.1.2",
+    "vue": "^2.*"
+  },
+  "ava": {
+    "files": [
+      "tests/*.js",
+      "!**/src"
     ],
-
-    "devDependencies": {
-        "vue": "^2.*"
-    }
+    "require": [
+      "babel-register"
+    ],
+    "babel": "inherit"
+  }
 }
