--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "dependencies": {
     "ava": "^0.18.0",
     "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.22.0",
-    "nyc": "^10.1.2",
-    "vue": "^2.*"
+    "nyc": "^10.1.2"
   },
   "ava": {
     "files": [
