--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   ],
   "dependencies": {
     "ava": "^0.18.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-env": "^1.6",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.22.0",
     "nyc": "^10.1.2"
   },
