change dep to devdep
according to https://github.com/siddharthkp/cost-of-modules the package size was 95.67M.
so changing them to dev the package is now 0.25M, testing with build scripts `watch, production` in laravel didnt show any issues.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "events",
     "handler"
   ],
-  "dependencies": {
+  "devDependencies": {
     "ava": "^0.18.0",
     "babel-preset-env": "^1.6",
     "babel-preset-stage-3": "^6.24.1",
