add vue as peerDependecie

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "events",
     "handler"
   ],
+  "peerDependecies": {
+    "vue": "^2.0.0"
+  }, 
   "devDependencies": {
     "ava": "^0.18.0",
     "babel-preset-env": "^1.6",
